# fangs-watcher

./: .gitignore  PUBLISHING.md  README.md  SPEC.md  fangs-watcher.code-workspace
.github/workflows/: watcher-scala.yml
python/: README.md  bootstrap.sh  impl.json  pyproject.toml  requirements-dev.txt  requirements.txt
python/tests/: test_app.py  test_core.py  test_state.py
python/watcher/: __main__.py  app.py  config.py  core.py  notify.py  state.py
scala/: .dockerignore  Containerfile  README.md  impl.json  project.scala
scala/src/main/scala/watcher/: Config.scala  Http.scala  Main.scala  Notifier.scala  State.scala  Watcher.scala
scala/src/test/scala/watcher/: ConfigTest.test.scala  FakeNotifier.test.scala  HttpTest.test.scala  MessagesTest.test.scala  StateTest.test.scala  WatcherTest.test.scala
smoke/: README.md  capture.py  impl.py  smoke.py
