[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fangs-watcher"
version = "0.1.0"
description = "Dead-man's switch for the fangs cluster — Python implementation of SPEC.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.47,<2",
    "uvicorn>=0.35,<1",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.10,<3",
]

[project.scripts]
fangs-watcher = "watcher.__main__:main"

[tool.setuptools.packages.find]
include = ["watcher*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = ["pytest>=9", "pytest-asyncio>=1.3", "httpx2>=0.1", "ruff>=0.6"]
